--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   bot:
     build:
       context: .
-    container_name: instagram_bot
+    container_name: instagram_bot_worker
     environment:
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
       - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
@@ -19,6 +19,25 @@ services:
       - redis
       - db
     command: ["celery", "-A", "celery_app", "worker", "--loglevel=info"]
+
+  bot_main:
+    build:
+      context: .
+    container_name: instagram_bot_main
+    environment:
+      - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
+      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+    volumes:
+      - ./videos:/app/videos
+    depends_on:
+      - redis
+      - db
+    command: ["python", "main.py"]
 
   redis:
     image: redis:alpine
