--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Existing dependencies
 celery
 redis
 requests
@@ -11,3 +12,8 @@ TikTokApi
 playwright
 httpx
 filelock>=3.0.0
+
+# New FastAPI dependencies
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart
