--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,11 @@ playwright
 httpx
 filelock>=3.0.0
 
-# New FastAPI dependencies
+# FastAPI dependencies
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 python-multipart
+
+
+# Video processing for duration checks
+opencv-python>=4.8.0
