--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -43,7 +41,7 @@ services:
       - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
       - MS_TOKENS=${MS_TOKENS}
       - SECRET_KEY=${SECRET_KEY}
-      - API_KEY=${API_KEY}
+      - API_KEY=${API_KEY:-}
       - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-http://localhost:3000}
     ports:
       - "8000:8000"
@@ -75,6 +73,7 @@ services:
       - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
       - MS_TOKENS=${MS_TOKENS}
       - SECRET_KEY=${SECRET_KEY}
+      - API_KEY=${API_KEY:-}
     volumes:
       - ./videos:/app/videos
       - ./sessions:/app/sessions
@@ -84,16 +83,6 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    restart: unless-stopped
-
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    environment:
-      - REACT_APP_API_URL=http://localhost:8000/api
     restart: unless-stopped
 
 volumes:
