--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,18 @@ services:
         condition: service_healthy
     restart: unless-stopped
 
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    environment:
+      - REACT_APP_API_URL=http://${VM_EXTERNAL_IP:-localhost}:8000/api
+    restart: unless-stopped
+    depends_on:
+      - app
+
 volumes:
   postgres_data:
   redis_data:
