--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -42,7 +40,7 @@ services:
       - instagram_bot_network
 
   app:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
     container_name: instagram_bot_app
@@ -50,28 +48,28 @@ services:
       # Database
       - DATABASE_URL=postgresql://instagram_bot:${POSTGRES_PASSWORD:-strong_password_123}@postgres:5432/instagram_bot
       - REDIS_URL=redis://redis:6379/0
-      
+
       # Application
       - ENVIRONMENT=production
       - DEBUG=false
       - APP_NAME=Instagram Bot API
       - APP_VERSION=2.0.0
-      
+
       # External APIs
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
       - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
       - MS_TOKENS=${MS_TOKENS}
-      
+
       # Security
       - SECRET_KEY=${SECRET_KEY}
       - API_KEY=${API_KEY:-}
       - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-http://localhost:3000}
-      
+
       # File paths
       - VIDEOS_DIR=./videos
       - SESSIONS_DIR=./sessions
       - LOGS_DIR=./logs
-      
+
       # Browser/Playwright settings
       - DISPLAY=:99
       - PLAYWRIGHT_BROWSERS_PATH=/ms-playwright
@@ -80,38 +78,41 @@ services:
       - CHROME_BIN=/usr/bin/chromium
       - CHROME_DRIVER=/usr/bin/chromedriver
       - CHROME_OPTIONS=--headless,--no-sandbox,--disable-dev-shm-usage,--disable-gpu
-      
+
       # Celery
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
-    
+
+      # Python path fix for imports
+      - PYTHONPATH=/app
+
     ports:
       - "8000:8000"
-    
+
     volumes:
       - ./videos:/app/videos
       - ./sessions:/app/sessions
       - ./logs:/app/logs
-      
+
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
-        
+
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 60s
-      
+
     restart: unless-stopped
     networks:
       - instagram_bot_network
 
   celery:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
     container_name: instagram_bot_celery
@@ -120,27 +121,27 @@ services:
       # Database
       - DATABASE_URL=postgresql://instagram_bot:${POSTGRES_PASSWORD:-strong_password_123}@postgres:5432/instagram_bot
       - REDIS_URL=redis://redis:6379/0
-      
+
       # Application
       - ENVIRONMENT=production
       - DEBUG=false
       - APP_NAME=Instagram Bot API
       - APP_VERSION=2.0.0
-      
+
       # External APIs
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
       - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
       - MS_TOKENS=${MS_TOKENS}
-      
+
       # Security
       - SECRET_KEY=${SECRET_KEY}
       - API_KEY=${API_KEY:-}
-      
+
       # File paths
       - VIDEOS_DIR=./videos
       - SESSIONS_DIR=./sessions
       - LOGS_DIR=./logs
-      
+
       # Browser/Playwright settings
       - DISPLAY=:99
       - PLAYWRIGHT_BROWSERS_PATH=/ms-playwright
@@ -149,10 +150,13 @@ services:
       - CHROME_BIN=/usr/bin/chromium
       - CHROME_DRIVER=/usr/bin/chromedriver
       - CHROME_OPTIONS=--headless,--no-sandbox,--disable-dev-shm-usage,--disable-gpu
-      
+
       # Celery
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+      # Python path fix for imports
+      - PYTHONPATH=/app
     
     volumes:
       - ./videos:/app/videos
