Revert "celery startup"
This reverts commit 1a61429b32bd36ea61c1cbf6f1c3a52114ea152c.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,9 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
 
+      # Python path fix for imports
+      - PYTHONPATH=/app
+
     ports:
       - "8000:8000"
 
@@ -113,9 +116,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: instagram_bot_celery
-    # Используем кастомный скрипт запуска вместо прямого вызова celery
-    command: bash start_celery.sh
-    working_dir: /app
+    command: celery -A celery_app worker --loglevel=info --pool=solo --concurrency=1
     environment:
       # Database
       - DATABASE_URL=postgresql://instagram_bot:${POSTGRES_PASSWORD:-strong_password_123}@postgres:5432/instagram_bot
@@ -153,6 +154,9 @@ services:
       # Celery
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+      # Python path fix for imports
+      - PYTHONPATH=/app
     
     volumes:
       - ./videos:/app/videos
