--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,39 +2,27 @@ FROM node:18-alpine as builder
 
 WORKDIR /app
 
-# Copy package files first for better caching
+# Copy package files
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production=false
+RUN npm ci
 
-# Copy source code and config files
+# Copy source code
 COPY . .
 
 # Build the app
 RUN npm run build
 
-# Production stage with nginx
+# Production stage
 FROM nginx:alpine
 
-# Remove default nginx static assets
-RUN rm -rf /usr/share/nginx/html/*
-
-# Copy built app from builder stage
+# Copy built app
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copy custom nginx configuration
+# Copy nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Remove default nginx config if it exists
-RUN rm -f /etc/nginx/conf.d/default.conf.orig
-
-# Create nginx user if not exists and set permissions
-RUN chmod -R 755 /usr/share/nginx/html
-RUN chown -R nginx:nginx /usr/share/nginx/html
-
-# Expose port 80
 EXPOSE 80
 
-# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
