--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,21 +4,16 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Enable gzip compression
+    # Gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/javascript
-        application/xml+rss
-        application/json
-        image/svg+xml;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+
+    # Handle client routing
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
 
     # Security headers
     add_header X-Frame-Options "DENY" always;
@@ -26,43 +21,9 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-    # Handle static assets with aggressive caching
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    # Cache static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
-        add_header X-Content-Type-Options "nosniff";
-
-        # Ensure correct MIME types
-        location ~* \.css$ {
-            add_header Content-Type text/css;
-        }
-        location ~* \.js$ {
-            add_header Content-Type application/javascript;
-        }
     }
-
-    # Handle API calls (if any from frontend)
-    location /api {
-        return 404;
-    }
-
-    # Handle all other routes (SPA fallback)
-    location / {
-        try_files $uri $uri/ /index.html;
-
-        # Prevent caching of index.html
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
-    }
-
-    # Specific handling for index.html
-    location = /index.html {
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
-    }
-
-    # Error pages
-    error_page 404 /index.html;
 }
